[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tower1.png" type="Texture" id=1]
[ext_resource path="res://assets/radius.png" type="Texture" id=2]
[ext_resource path="res://objects/Tower.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 125.0

[node name="Tower" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteRadius" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( 16, 16 )
scale = Vector2( 0.96, 0.96 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
